--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,15 @@
     padding-bottom: 2%;
     border-bottom: 1px solid #c5cae9;
 }
+
+
+/* About */
+.about{
+    margin-top: 5%;
+}
+
+.about .card{
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
