--- a/css/styles.css
+++ b/css/styles.css
@@ -29,21 +29,32 @@
 
 
 /* liga */
-.liga{
+.liga .center a{
+    width: 30%;
+    margin-top: 1%;
+}
 
+#negara{
+    padding-bottom: 2%;
+    border-bottom: 1px solid #c5cae9;
 }
 
 #bendera{
     width: 30%;
-    margin-top: 5%;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
+.liga .card{
+    border: 2px soldi black;
 }
 
 .liga .row{
     display: flex;
     flex-wrap: wrap;
     margin: 5px;
-    /* border: 2px solid black; */
-    margin-left: 10%;
+    justify-content: space-between;
+
 }
 
 
