--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,15 @@
 /* Home */
 
-.home {}
-
-.home .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 5px;
+.home {
+    
 }
 
+
+
 .country-name {
-    font-size: 20px;
-    width: 320px;
-    padding: 15px;
+    font-size: 14px;
+    padding: 15px 0px 15px ;
+    margin-left: 5%;
 }
 
 .country-name i {
@@ -29,20 +26,8 @@
 
 /* liga */
 .liga .center a {
-    /* width: 30%; */
+    width: 30%;
     margin-top: 1%;
-}
-
-.liga .card {
-    border: 2px soldi black;
-}
-
-.liga .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 5px;
-    justify-content: space-between;
-
 }
 
 
